--- a/hNext/hNext.WebClient/Views/Shared/Components/DoctorPositionEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/DoctorPositionEditor/Default.cshtml
@@ -19,7 +19,7 @@
                     <label class="col-lg-4 col-form-label text-left text-lg-right" asp-for="Position.SpecialtyId"></label>
                     <div class="col-lg-8">
                         <div><span asp-validation-for="Position.SpecialtyId" class="text-danger"></span></div>
-                        <select class="form-control" asp-for="Position.SpecialtyId" v-model="position.specialtyId">
+                        <select class="custom-select" asp-for="Position.SpecialtyId" v-model="position.specialtyId">
                             <option value="">@Localizer[nameof(Resources.SelectSpecialty)]</option>
                             <option v-for="s in specialtiesList" :key="s.id" :value="s.id">
                                 {{ s.name }}
@@ -31,7 +31,7 @@
                     <label class="col-lg-4 col-form-label text-left text-lg-right" asp-for="Position.PositionId"></label>
                     <div class="col-lg-8">
                         <div><span asp-validation-for="Position.PositionId" class="text-danger"></span></div>
-                        <select class="form-control" asp-for="Position.PositionId" v-model="position.positionId"
+                        <select class="custom-select" asp-for="Position.PositionId" v-model="position.positionId"
                                 asp-items="@new SelectList(Model.Positions, nameof(Position.Id), nameof(Position.Name))">
                             <option value="">@Localizer[nameof(Resources.SelectPosition)]</option>
                         </select>
@@ -41,7 +41,7 @@
                     <label class="col-lg-4 col-form-label text-left text-lg-right" asp-for="Position.HospitalId"></label>
                     <div class="col-lg-8">
                         <div><span asp-validation-for="Position.HospitalId" class="text-danger"></span></div>
-                        <select class="form-control" asp-for="Position.HospitalId" v-model="position.hospitalId">
+                        <select class="custom-select" asp-for="Position.HospitalId" v-model="position.hospitalId">
                             <option value="">@Localizer[nameof(Resources.SelectHospital)]</option>
                             <option v-for="h in hospitals" :key="h.id" :value="h.id">
                                 {{ h.name }}
@@ -52,7 +52,7 @@
                 <div class="form-group row mx-0">
                     <label class="col-lg-4 col-form-label text-left text-lg-right" asp-for="Position.DepartmentId"></label>
                     <div class="col-lg-8">
-                        <select class="form-control" asp-for="Position.DepartmentId" v-model="position.departmentId">
+                        <select class="custom-select" asp-for="Position.DepartmentId" v-model="position.departmentId">
                             <option value="">@Localizer[nameof(Resources.SelectDepartment)]</option>
                             <option v-for="h in departments" :key="h.id" :value="h.id">
                                 {{ h.name }}
