--- a/hNext/hNext.WebClient/Views/Shared/Components/PatientDiagnosysEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PatientDiagnosysEditor/Default.cshtml
@@ -4,6 +4,14 @@
     <form class="modal-window" :style="{zIndex:level*1000}">
         <diagnosys-editor v-if="showDiagnosysEditor" :level="level+1" :initial-enabled="enabled"
                           @@save="addDiagnosys" @@cancel="showDiagnosysEditor = false"></diagnosys-editor>
+        <confirmation-dialog v-if="showSaveConfirmation" :level="level+1" @@yes="$emit('save', diagnosys)"
+                             @@no="showSaveConfirmation = false">
+            @Localizer[nameof(Resources.SaveAndExit)]?
+        </confirmation-dialog>
+        <confirmation-dialog v-if="showCancelConfirmation" :level="level+1" @@yes="$emit('cancel')"
+                             @@no="showCancelConfirmation = false">
+            @Localizer[nameof(Resources.CancelAndExit)]?
+        </confirmation-dialog>
         <div class="d-flex flex-column mb-1">
             <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click.stop.prevent="cancel">
                 <i class="fa fa-times"></i>
@@ -14,8 +22,11 @@
                 <label class="col-lg-3 col-form-label text-left text-lg-right" asp-for="DiagnosysId"></label>
                 <div class="col-lg-9">
                     <div><span asp-validation-for="DiagnosysId"></span></div>
-                    <select class="form-control" asp-for="DiagnosysId">
+                    <select class="custom-select" asp-for="DiagnosysId" v-model="diagnosys.diagnosysId">
                         <option value="">@Localizer[nameof(Resources.SelectDiagnosys)]</option>
+                        <option v-for="d in diagnoses" :key="d.id" :value="d.id">
+                            {{ `${d.name} ${getICD(d)}` }}
+                        </option>
                     </select>
                 </div>
             </div>
@@ -29,7 +40,7 @@
             <div class="form-group row mx-0 mt-lg-3">
                 <label class="col-lg-3 col-form-label text-left text-lg-right" asp-for="Date"></label>
                 <div class="col-lg-9">
-                    <input asp-for="Date" class="form-control" />
+                    <input asp-for="Date" class="form-control" v-model="diagnosys.date"/>
                 </div>
             </div>
             <div class="d-flex flex-row flex-nowrap justify-content-between justify-content-lg-end mt-2 mx-3">
