--- a/hNext/hNext.WebClient/Views/Shared/Components/RecordFieldTemplateEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/RecordFieldTemplateEditor/Default.cshtml
@@ -1,72 +1,122 @@
-﻿@model RecordFieldTemplate
+﻿@model RecordFieldTemplateEditorViewModel
 
 <template id="record-field-template-editor-template">
-    <form class="modal-window" :style="{zIndex:level*1000}">
+    <div class="modal-window" :style="{zIndex:level*1000}">
+        <confirmation-dialog v-if="showSaveConfirmation" :level="level+1" :initial-enabled="enabled"
+                             @@yes="$emit('save', field)" @@no="showSaveConfirmation = false">
+            @Localizer[nameof(Resources.SaveAndExit)]?
+        </confirmation-dialog>
+        <confirmation-dialog v-if="showEditOptionConfirmation" :level="level+1" :initial-enabled="enabled"
+                             @@yes="changeOption" @@no="showEditOptionConfirmation = false">
+            @Localizer[nameof(Resources.EditOption)]?
+        </confirmation-dialog>
+        <confirmation-dialog v-if="showDeleteOptionConfirmation" :level="level+1" :initial-enabled="enabled"
+                             @@yes="removeOption" @@no="showDeleteOptionConfirmation = false">
+            @Localizer[nameof(Resources.DeleteOption)]?
+        </confirmation-dialog>
         <div class="d-flex flex-column mb-1">
             <button class="btn btn-danger ml-auto" :disabled="!enabled" @@click.stop.prevent="cancel">
                 <i class="fa fa-times"></i>
             </button>
         </div>
         <div class="d-flex flex-column show-panel modal-window-show-panel">
-            <div class="form-group row mx-0 align-items-lg-end">
-                <label class="col-lg-3 col-form-label text-left" asp-for="Header"></label>
-                <div class="col-lg-9">
-                    <div><span asp-validation-for="Header" class="text-danger"></span></div>
-                    <input asp-for="Header" class="form-control" :disabled="!enabled" v-model="field.header" />
+            <form class="d-flex flex-column" ref="formfield">
+                <div class="form-group row mx-0 align-items-lg-end">
+                    <label class="col-lg-3 col-form-label text-left" asp-for="RecordFieldTemplate.Header"></label>
+                    <div class="col-lg-9">
+                        <div><span asp-validation-for="RecordFieldTemplate.Header" class="text-danger"></span></div>
+                        <input asp-for="RecordFieldTemplate.Header" class="form-control" :disabled="!enabled" v-model="field.header" />
+                    </div>
                 </div>
-            </div>
-            <div class="custom-control custom-switch ml-3">
-                <input type="checkbox" :disabled="!enabled" class="custom-control-input" asp-for="NewLine" v-model="field.newLine" />
-                <label class="custom-control-label" asp-for="NewLine"></label>
-            </div>
-            <div class="row mx-0 mt-2 justify-content-center">
-                <h6>@Localizer[nameof(Resources.Type)]</h6>
-            </div>
-            <div class="row mx-3">
-                <div class="col-lg-6 custom-control custom-radio">
-                    <input type="radio" :disabled="!enabled" name="record-field-type" id="lineType" class="custom-control-input" value="0" v-model="field.recordFieldType" />
-                    <label class="custom-control-label" for="lineType">@Localizer[nameof(Resources.Line)]</label>
+                <div class="custom-control custom-switch ml-3">
+                    <input type="checkbox" :disabled="!enabled" class="custom-control-input" asp-for="RecordFieldTemplate.NewLine" v-model="field.newLine" />
+                    <label class="custom-control-label" asp-for="RecordFieldTemplate.NewLine"></label>
                 </div>
-                <div class="col-lg-6 custom-control custom-radio">
-                    <input type="radio" :disabled="!enabled" name="record-field-type" id="integerType" class="custom-control-input" value="1" v-model="field.recordFieldType" />
-                    <label class="custom-control-label" for="integerType">@Localizer[nameof(Resources.Integer)]</label>
+                <div class="row mx-0 mt-2 justify-content-center">
+                    <h6>@Localizer[nameof(Resources.Type)]</h6>
                 </div>
-            </div>
-            <div class="row mx-3 mt-lg-2">
-                <div class="col-lg-6 custom-control custom-radio">
-                    <input type="radio" :disabled="!enabled" name="record-field-type" id="decimalType" class="custom-control-input" value="2" v-model="field.recordFieldType" />
-                    <label class="custom-control-label" for="decimalType">@Localizer[nameof(Resources.Decimal)]</label>
+                <div class="row mx-3">
+                    <div class="col-lg-6 custom-control custom-radio">
+                        <input type="radio" :disabled="!enabled" name="record-field-type" id="lineType" class="custom-control-input" value="0" v-model="field.recordFieldType" />
+                        <label class="custom-control-label" for="lineType">@Localizer[nameof(Resources.Line)]</label>
+                    </div>
+                    <div class="col-lg-6 custom-control custom-radio">
+                        <input type="radio" :disabled="!enabled" name="record-field-type" id="integerType" class="custom-control-input" value="1" v-model="field.recordFieldType" />
+                        <label class="custom-control-label" for="integerType">@Localizer[nameof(Resources.Integer)]</label>
+                    </div>
                 </div>
-                <div class="col-lg-6 custom-control custom-radio">
-                    <input type="radio" :disabled="!enabled" name="record-field-type" id="optionsType" class="custom-control-input" value="3" v-model="field.recordFieldType" />
-                    <label class="custom-control-label" for="optionsType">@Localizer[nameof(Resources.Options)]</label>
+                <div class="row mx-3 mt-lg-2">
+                    <div class="col-lg-6 custom-control custom-radio">
+                        <input type="radio" :disabled="!enabled" name="record-field-type" id="decimalType" class="custom-control-input" value="2" v-model="field.recordFieldType" />
+                        <label class="custom-control-label" for="decimalType">@Localizer[nameof(Resources.Decimal)]</label>
+                    </div>
+                    <div class="col-lg-6 custom-control custom-radio">
+                        <input type="radio" :disabled="!enabled" name="record-field-type" id="optionsType" class="custom-control-input" value="3" v-model="field.recordFieldType" />
+                        <label class="custom-control-label" for="optionsType">@Localizer[nameof(Resources.Options)]</label>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group mt-lg-2 mx-3" v-if="field.recordFieldType == 0">
-                <label asp-for="DefaultValue" class="col-form-label text-left text-lg-right"></label>
-                <div class="">
-                    <textarea asp-for="DefaultValue" class="form-control" :disabled="!enabled" v-model="field.defaultValue"></textarea>
+                <div class="form-group mt-lg-2 mx-3" v-if="field.recordFieldType == 0">
+                    <label asp-for="RecordFieldTemplate.DefaultValue" class="col-form-label text-left text-lg-right"></label>
+                    <div class="">
+                        <textarea asp-for="RecordFieldTemplate.DefaultValue" class="form-control" :disabled="!enabled" v-model="field.defaultValue"></textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row mx-0 mt-lg-2" v-else-if="field.recordFieldType == 1">
-                <label asp-for="DefaultValue" class="col-lg-6 col-form-label text-left"></label>
-                <div class="col-lg-6">
-                    <input type="number" step="1" asp-for="DefaultValue" class="form-control" :disabled="!enabled" v-model="field.defaultValue" />
+                <div class="form-group row mx-0 mt-lg-2" v-else-if="field.recordFieldType == 1">
+                    <label asp-for="RecordFieldTemplate.DefaultValue" class="col-lg-6 col-form-label text-left"></label>
+                    <div class="col-lg-6">
+                        <input type="number" step="1" asp-for="RecordFieldTemplate.DefaultValue" class="form-control" :disabled="!enabled" v-model="field.defaultValue" />
+                    </div>
                 </div>
-            </div>
-            <div class="form-group row mx-0 mt-lg-2" v-else-if="field.recordFieldType == 2">
-                <label asp-for="DefaultValue" class="col-lg-6 col-form-label text-left"></label>
-                <div class="col-lg-6">
-                    <input type="number" asp-for="DefaultValue" class="form-control" :disabled="!enabled" v-model="field.defaultValue" />
+                <div class="form-group row mx-0 mt-lg-2" v-else-if="field.recordFieldType == 2">
+                    <label asp-for="RecordFieldTemplate.DefaultValue" class="col-lg-6 col-form-label text-left"></label>
+                    <div class="col-lg-6">
+                        <input type="number" asp-for="RecordFieldTemplate.DefaultValue" class="form-control" :disabled="!enabled" v-model="field.defaultValue" />
+                    </div>
                 </div>
-            </div>
-            <div class="d-flex flex-column mx-3">
-
-            </div>
+                <div class="d-flex flex-column mx-3 mt-lg-2" v-else-if="field.recordFieldType == 3">
+                    <div class="d-flex flex-row">
+                        <div class="flex-grow-1 mr-1" style="max-height: 20vh; overflow-y: auto;">
+                            <table class="table table-striped table-bordered table-hover table-sm">
+                                <tbody>
+                                    <tr v-for="f in field.recordFieldTemplateOptions" :v-key="f.orderNo"
+                                        :class="{'selected-table-row': f.orderNo == selectedOption.orderNo}"
+                                        @@click="optionClicked(f)">
+                                        <td>{{f.value}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <button class="btn btn-primary my-1" @@click.stop.prevent="editOption" :disabled="!enabled">
+                                <i class="fa fa-pen"></i>
+                            </button>
+                            <button class="btn btn-primary my-1" @@click.stop.prevent="moveOptionUp" :disabled="!enabled">
+                                <i class="fa fa-arrow-up"></i>
+                            </button>
+                            <button class="btn btn-primary my-1" @@click.stop.prevent="moveOptionDown" :disabled="!enabled">
+                                <i class="fa fa-arrow-down"></i>
+                            </button>
+                            <button class="btn btn-danger my-1" @@click.stop.prevent="deleteOption" :disabled="!enabled">
+                                <i class="fa fa-minus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <form class="d-flex flex-column flex-lg-row mx-3" ref="option" v-if="field.recordFieldType == 3">
+                <div class="flex-grow-1">
+                    <div><span asp-validation-for="RecordFieldTemplateOption.Value" class="text-danger"></span></div>
+                    <input class="form-control flex-grow-1" asp-for="RecordFieldTemplateOption.Value" :disabled="!enabled"
+                           placeholder="@Localizer[nameof(Resources.EnterOption)]" v-model="newOptionValue" />
+                </div>
+                <button class="btn btn-primary ml-lg-2 n mt-1 mt-lg-0" @@click.stop.prevent="addOption" :disabled="!enabled">
+                    <i class="fa fa-plus"></i>
+                </button>
+            </form>
             <div class="d-flex flex-row flex-nowrap justify-content-between justify-content-lg-end mt-2 mx-3">
                 <button class="btn btn-primary" :disabled="!enabled" @@click.stop.prevent="save">@Localizer[nameof(Resources.Save)]</button>
                 <button class="btn btn-danger ml-2" :disabled="!enabled" @@click.stop.prevent="cancel">@Localizer[nameof(Resources.Cancel)]</button>
             </div>
         </div>
-    </form>
+    </div>
 </template>
